update MATSim version and clean up